clean-up, fix _faculty.html spacing issue.

--- a/andreas09.css
+++ b/andreas09.css
@@ -154,6 +154,11 @@ line-height:1.4em;
 margin:0 0 16px 10px;
 }
 
+#centercontent {
+	margin-left: 165px;
+	margin-right: 165px;
+}
+
 .linklist {
 list-style:none;
 margin:0 0 5px 5px; /*** 0 0 16px 10px ***/
@@ -246,6 +251,10 @@ font-weight:bold;
 
 /*** Various classes ***/
 
+.biotext {
+	margin-left: 170px;
+}
+
 .bioblock {
 	float:left;
 }
@@ -279,7 +288,7 @@ border:1px solid #b0b0b0;
 
 .clearingdiv {
 clear:both;
-height:30px;
+height:1px;
 width:1px;
 }
 
